Make Ferd Berfel fail, as well it should

--- a/test/yaml/colon_polyp_r401/tests/Bundle-example-cpBUndle.yaml
+++ b/test/yaml/colon_polyp_r401/tests/Bundle-example-cpBUndle.yaml
@@ -866,4 +866,5 @@ data:
     subject:
       reference: Patient/example-cpPatient
     valueBoolean: true
-results: null
+results: 
+  NextColonoscopyInterval: [1,1]
